# fatty_acid_names

./: Cargo.toml  README.md
.github/workflows/: cargo_machete.yml  rust.yml  typos.yml
ftl/en/: main.ftl  main.selectors.ftl
ftl/ru/: main.ftl
src/: const.rs  lib.rs
src/egui/: mod.rs  names.rs  readable.rs  writable.rs
