[package]
name = "fatty_acid_names"
version = "0.1.0"
authors = ["Giorgi Vladimirovich Kazakov", "Roman Alexandrovich Sidorov"]
edition = "2024"

[dependencies]
const_format = "0.2.36"
typed-builder = "0.23.2"

egui_l10n = { git = "https://github.com/ippras/egui_l10n", branch = "0.6", features = [
    "macros",
] }

egui = { version = "0.34.3", optional = true }
egui-phosphor = { version = "0.12.0", optional = true }

[features]
default = ["egui"]

egui = ["dep:egui", "dep:egui-phosphor"]
